RESOLVED FIXED26942
Dump As Text doing the wrong thing when overflow is set on replaced elements
https://bugs.webkit.org/show_bug.cgi?id=26942
Summary Dump As Text doing the wrong thing when overflow is set on replaced elements
Dave Hyatt
Reported 2009-07-02 16:33:21 PDT
Setting overflow to hidden on replaced elements actually affected the dumping of text results. This should not be happening, since a replaced element doesn't do anything with the overflow value. The implication here is that some code must be looking at the style()->overflowX() value instead of hasOverflowClip on the renderer.
Attachments
Patch (1.24 KB, patch)
2009-07-02 16:39 PDT, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2009-07-02 16:34:12 PDT
See checkin r45500 for tests that changed when I went from hidden back to visible as the default for replaced elements.
Dave Hyatt
Comment 2 2009-07-02 16:39:50 PDT
mitz
Comment 3 2009-07-02 16:41:37 PDT
Comment on attachment 32207 [details] Patch r=me assuming the find-on-page tests that were added with Darin’s change still pass
Dave Hyatt
Comment 4 2009-07-02 16:53:15 PDT
Fixed in r45506.
Note You need to log in before you can comment on or make changes to this bug.