2009-07-02  David Hyatt  <hyatt@apple.com>

Reviewed by Dan Bernstein.

        TextIterator should use hasOverflowClip when checking for overflow instead of looking at the style.
        https://bugs.webkit.org/show_bug.cgi?id=26942

        * editing/TextIterator.cpp:
        (WebCore::fullyClipsContents):



Canonical link: https://commits.webkit.org/37167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45506 268f45cc-cd09-0410-ab3c-d52691b4dbfc